kubernetes/apps/k8s_migration/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "monitoring-group"
    alb.ingress.kubernetes.io/group.order: "3"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-alertmanager
                port:
                  number: 9093
